--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MOcHA</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="nav">
+      <div class="nav-bar">
+        <div class="nav-logo">M0cHA</div>
+        <div class="nav-link">
+          <ul>
+            <a href="#"><li>HOME</li></a>
+            <a href="#"><li>About</li></a>
+            <a href="#"><li>Contact</li></a>
+            <a href="#"><li>Categories</li></a>
+            <a href="#"><li>Nutrition Facts</li></a>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
