--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
               ><li>Nutrition <span>Facts</span></li></a
             >
           </ul>
+          <button type="button" class="button">sign up</button>
         </div>
       </div>
     </div>
