banner title modified

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
           <button type="button" class="button">sign up</button>
         </div>
       </div>
+      <div class="banner-title">
+        <h1>
+          <span>Coffee</span><i class="fas fa-mug-hot"></i> And Friends Are The
+          Perfect Blend Because it Doesn't Ask silly Questions.....
+        </h1>
+      </div>
     </div>
   </body>
 </html>
