--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="nav-logo">M0cHA</div>
         <div class="nav-link">
           <ul>
-            <a href="#"><li>HOME</li></a>
-            <a href="#"><li>About</li></a>
+            <a href="index.html"><li>HOME</li></a>
+            <a href="./about.html"><li>About</li></a>
             <a href="#"><li>Contact</li></a>
-            <a href="#"><li>Categories</li></a>
+            <a href="#"><li>Menu</li></a>
             <a href="#"
               ><li>Nutrition <span>Facts</span></li></a
             >
