complete about section

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <ul>
             <a href="index.html"><li>HOME</li></a>
             <a href="./about.html"><li>About</li></a>
-            <a href="#"><li>Contact</li></a>
-            <a href="#"><li>Menu</li></a>
+            <a href=""><li>Contact</li></a>
+            <a href=""><li>Menu</li></a>
             <a href="#"
               ><li>Nutrition <span>Facts</span></li></a
             >
