--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <div class="nav-about">
       <div class="nav-bar">
         <div class="about-logo">M0cHA</div>
-        <div class="nav-link">
+        <div class="about-nav-link">
           <ul>
             <a href="./index.html"><li>Home</li></a>
             <a href="./about.html"><li>ABOUT</li></a>
