--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
           <ul>
             <a href="./index.html"><li>Home</li></a>
             <a href="./about.html"><li>ABOUT</li></a>
-            <a href="#"><li>Contact</li></a>
+            <a href="./contact.html"><li>Contact</li></a>
             <a href="#"><li>Menu</li></a>
             <a href="#"><li>Nutrition Facts</li></a>
           </ul>
