--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
         <div class="contact-nav-link">
           <ul>
             <a href="./index.html"><li>Home</li></a>
-            <a href="./about.html"><li>ABOUT</li></a>
-            <a href="./contact.html"><li>Contact</li></a>
+            <a href="./about.html"><li>About</li></a>
+            <a href="./contact.html"><li>CONTACT</li></a>
             <a href="#"><li>Menu</li></a>
             <a href="#"><li>Nutrition Facts</li></a>
           </ul>
