complete our contact section

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
             <a href="./about.html"><li>About</li></a>
             <a href="./contact.html"><li>Contact</li></a>
             <a href=""><li>Menu</li></a>
-            <a href="#"
-              ><li>Nutrition <span>Facts</span></li></a
-            >
+            <a href="#"><li>Nutrition Facts</li></a>
           </ul>
           <button type="button" class="button">sign up</button>
         </div>
