--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacts</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+      integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -16,11 +22,35 @@
             <a href="./index.html"><li>Home</li></a>
             <a href="./about.html"><li>About</li></a>
             <a href="./contact.html"><li>CONTACT</li></a>
-            <a href="#"><li>Menu</li></a>
-            <a href="#"><li>Nutrition Facts</li></a>
+            <a href="#"
+              ><li><span>Menu</span></li></a
+            >
+            <a href="#"
+              ><li><span>Nutrition Facts</span></li></a
+            >
           </ul>
           <button type="button" class="button">sign up</button>
         </div>
+      </div>
+      <div class="contact-details">
+        <h3>Email</h3>
+        <p>Customerservice@Mocha.com</p>
+        <h3>Address</h3>
+        <p>
+          Mocha Gourmet coffee, 0000 stage road,<br />
+          hamburg, CA,0000,00 avenue
+        </p>
+        <h3>Phone</h3>
+        <p>
+          ( 00-0000-000-0 )<br />
+          We are providing 24 hours Customer service
+        </p>
+      </div>
+      <div class="social-icon">
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-pinterest"></i>
       </div>
     </div>
   </body>
