--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             <a href="./index.html"><li>Home</li></a>
             <a href="./about.html"><li>ABOUT</li></a>
             <a href="./contact.html"><li>Contact</li></a>
-            <a href="#"><li>Menu</li></a>
+            <a href="./menu.html"><li>Menu</li></a>
             <a href="#"><li>Nutrition Facts</li></a>
           </ul>
           <button type="button" class="button">sign up</button>
