--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="index.html"><li>HOME</li></a>
             <a href="./about.html"><li>About</li></a>
             <a href="./contact.html"><li>Contact</li></a>
-            <a href=""><li>Menu</li></a>
+            <a href="./menu.html"><li>Menu</li></a>
             <a href="#"><li>Nutrition Facts</li></a>
           </ul>
           <button type="button" class="button">sign up</button>
