--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menu</title>
+    <title>M0cHA</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -16,12 +16,13 @@
             <a href="./index.html"><li>Home</li></a>
             <a href="./about.html"><li>ABOUT</li></a>
             <a href="./contact.html"><li>Contact</li></a>
-            <a href="./menu.html"><li>Menu</li></a>
+            <a href="./menu.html"><li>MENU</li></a>
             <a href="#"><li>Nutrition Facts</li></a>
           </ul>
           <button type="button" class="button">sign up</button>
         </div>
       </div>
+      <div class="product-1"></div>
     </div>
   </body>
 </html>
