--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contacts</title>
+    <title>M0cHA</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
@@ -22,7 +22,7 @@
             <a href="./index.html"><li>Home</li></a>
             <a href="./about.html"><li>About</li></a>
             <a href="./contact.html"><li>CONTACT</li></a>
-            <a href="#"
+            <a href="./menu.html"
               ><li><span>Menu</span></li></a
             >
             <a href="#"
