menu table chart

--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,58 @@
           <button type="button" class="button">sign up</button>
         </div>
       </div>
-      <div class="product-1"></div>
+      <table>
+        <tr>
+          <th>Flavours</th>
+          <th>regular cup</th>
+          <th>standard cup</th>
+        </tr>
+        <tr>
+          <td class="item">Cappuccino / Café Latté</td>
+          <td>Rs.370</td>
+          <td>Rs.500</td>
+        </tr>
+        <tr>
+          <td class="item">Café Americano</td>
+          <td>Rs.370</td>
+          <td>Rs.500</td>
+        </tr>
+        <tr>
+          <td class="item">Espresso Shot / Flavour Syrup / Skim Milk</td>
+          <td>Rs.370</td>
+          <td>Rs.500</td>
+        </tr>
+        <tr>
+          <td class="item">Espresso / Ristretto</td>
+          <td>Rs.370</td>
+          <td>Rs.500</td>
+        </tr>
+        <tr>
+          <td class="item">Café Mocha</td>
+          <td>Rs.370</td>
+          <td>Rs.500</td>
+        </tr>
+        <tr>
+          <td class="item">Caramelatte</td>
+          <td>Rs.370</td>
+          <td>Rs.500</td>
+        </tr>
+        <tr>
+          <td class="item">Very Vanilla Latté</td>
+          <td>Rs.370</td>
+          <td>Rs.500</td>
+        </tr>
+        <tr>
+          <td class="item">Irish Nut Crème</td>
+          <td>Rs.370</td>
+          <td>Rs.500</td>
+        </tr>
+        <tr>
+          <td class="item">White Chocolate Mocha</td>
+          <td>Rs.370</td>
+          <td>Rs.500</td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
