complete our menu section

--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,7 @@
             <a href="./index.html"><li>Home</li></a>
             <a href="./about.html"><li>About</li></a>
             <a href="./contact.html"><li>CONTACT</li></a>
-            <a href="./menu.html"
-              ><li><span>Menu</span></li></a
-            >
+            <a href="./menu.html"><li>Menu</li></a>
             <a href="#"
               ><li><span>Nutrition Facts</span></li></a
             >
