--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
       </div>
       <div class="banner-title">
         <h1>
-          <span>Coffee</span><i class="fas fa-mug-hot"></i> And Friends Are The
-          Perfect Blend Because it Doesn't Ask silly Questions.....
+          <span>Coffee</span><i class="fas fa-mug-hot"></i> And Friends <br />
+          Are The Perfect Blend <br />Because it Doesn't Ask silly
+          Questions.....
         </h1>
       </div>
     </div>
