--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
         <div class="menu-nav-link">
           <ul>
             <a href="./index.html"><li>Home</li></a>
-            <a href="./about.html"><li>ABOUT</li></a>
+            <a href="./about.html"><li>About</li></a>
             <a href="./contact.html"><li>Contact</li></a>
             <a href="./menu.html"><li>MENU</li></a>
             <a href="#"><li>Nutrition Facts</li></a>
@@ -24,52 +24,52 @@
       </div>
       <table>
         <tr>
-          <th>Flavours</th>
+          <th>FLAVOUR's</th>
           <th>regular cup</th>
           <th>standard cup</th>
         </tr>
         <tr>
-          <td class="item">Cappuccino / Café Latté</td>
+          <td>Cappuccino / Café Latté</td>
           <td>Rs.370</td>
           <td>Rs.500</td>
         </tr>
         <tr>
-          <td class="item">Café Americano</td>
+          <td>Café Americano</td>
           <td>Rs.370</td>
           <td>Rs.500</td>
         </tr>
         <tr>
-          <td class="item">Espresso Shot / Flavour Syrup / Skim Milk</td>
+          <td>Espresso Shot / Flavour Syrup / Skim Milk</td>
           <td>Rs.370</td>
           <td>Rs.500</td>
         </tr>
         <tr>
-          <td class="item">Espresso / Ristretto</td>
+          <td>Espresso / Ristretto</td>
           <td>Rs.370</td>
           <td>Rs.500</td>
         </tr>
         <tr>
-          <td class="item">Café Mocha</td>
+          <td>Café Mocha</td>
           <td>Rs.370</td>
           <td>Rs.500</td>
         </tr>
         <tr>
-          <td class="item">Caramelatte</td>
+          <td>Caramelatte</td>
           <td>Rs.370</td>
           <td>Rs.500</td>
         </tr>
         <tr>
-          <td class="item">Very Vanilla Latté</td>
+          <td>Very Vanilla Latté</td>
           <td>Rs.370</td>
           <td>Rs.500</td>
         </tr>
         <tr>
-          <td class="item">Irish Nut Crème</td>
+          <td>Irish Nut Crème</td>
           <td>Rs.370</td>
           <td>Rs.500</td>
         </tr>
         <tr>
-          <td class="item">White Chocolate Mocha</td>
+          <td>White Chocolate Mocha</td>
           <td>Rs.370</td>
           <td>Rs.500</td>
         </tr>
