--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             <a href="./contact.html"><li>CONTACT</li></a>
             <a href="./menu.html"><li>Menu</li></a>
             <a href="#"
-              ><li><span>Nutrition Facts</span></li></a
+              ><li><span>Feedback</span></li></a
             >
           </ul>
           <button type="button" class="button">sign up</button>
