--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="./about.html"><li>About</li></a>
             <a href="./contact.html"><li>Contact</li></a>
             <a href="./menu.html"><li>Menu</li></a>
-            <a href="#"><li>Nutrition Facts</li></a>
+            <a href="#"><li>Feedback</li></a>
           </ul>
           <button type="button" class="button">sign up</button>
         </div>
