--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
             <a href="./about.html"><li>About</li></a>
             <a href="./contact.html"><li>Contact</li></a>
             <a href="./menu.html"><li>MENU</li></a>
-            <a href="#"><li>Nutrition Facts</li></a>
+            <a href="#"><li>Feedback</li></a>
           </ul>
           <button type="button" class="button">sign up</button>
         </div>
