--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             <a href="./about.html"><li>ABOUT</li></a>
             <a href="./contact.html"><li>Contact</li></a>
             <a href="./menu.html"><li>Menu</li></a>
-            <a href="#"><li>Feedback</li></a>
+            <a href="#"><li>( Feedback )</li></a>
           </ul>
           <button type="button" class="button">sign up</button>
         </div>
