complete navbar of feedback

--- a/feedback.html
+++ b/feedback.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="nav">
+    <div class="nav-feedback">
       <div class="nav-bar">
-        <div class="nav-logo">M0cHA</div>
-        <div class="nav-link">
+        <div class="feedback-logo">M0cHA</div>
+        <div class="feedback-nav-link">
           <ul>
             <a href="index.html"><li>HOME</li></a>
             <a href="./about.html"><li>About</li></a>
@@ -27,13 +27,6 @@
           </ul>
           <button type="button" class="button">sign up</button>
         </div>
-      </div>
-      <div class="banner-title">
-        <h1>
-          <span>Coffee</span><i class="fas fa-mug-hot"></i> And Friends <br />
-          Are The Perfect Blend <br />Because it Doesn't Ask silly
-          Questions.....
-        </h1>
       </div>
     </div>
   </body>
