modified about image

--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,7 @@
             <a href="./about.html"><li>About</li></a>
             <a href="./contact.html"><li>CONTACT</li></a>
             <a href="./menu.html"><li>Menu</li></a>
-            <a href="./feedback.html"
-              ><li><span>( Feedback )</span></li></a
-            >
+            <a href="./feedback.html"><li>( Feedback )</li></a>
           </ul>
           <button type="button" class="button">sign up</button>
         </div>
