creating feedback card

--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
           <button type="button" class="button">sign up</button>
         </div>
       </div>
-      <table>
+      <table class="sheet-1">
         <tr>
           <th>FLAVOUR's</th>
           <th>regular cup</th>
@@ -73,7 +73,7 @@
           <td>Rs.370</td>
           <td>Rs.500</td>
         </tr>
-      </table>
+      </table class="sheet-2">
     </div>
   </body>
 </html>
