--- a/feedback.html
+++ b/feedback.html
@@ -28,6 +28,7 @@
           <button type="button" class="button">sign up</button>
         </div>
       </div>
+      <div class="card"></div>
     </div>
   </body>
 </html>
