add ul list and use type attribbute and use checkbox for contant

--- a/feedback.html
+++ b/feedback.html
@@ -28,7 +28,19 @@
           <button type="button" class="button">sign up</button>
         </div>
       </div>
-      <div class="card"></div>
+      <div class="card">
+        <h2>Feedback</h2>
+        <ul>
+          <li>Rating on</li>
+          <li>poor</li>
+          <li>good</li>
+          <li>excellent</li>
+        </ul>
+        <label for="chart">rating</label>
+        <input type="checkbox" name="etc" />
+        <input type="checkbox" name="etc" />
+        <input type="checkbox" name="etc" />
+      </div>
     </div>
   </body>
 </html>
