modified card add shadow and set align

--- a/feedback.html
+++ b/feedback.html
@@ -29,17 +29,46 @@
         </div>
       </div>
       <div class="card">
-        <h2>Feedback</h2>
         <ul>
-          <li>Rating on</li>
+          <li><u>Quailty</u></li>
           <li>poor</li>
           <li>good</li>
           <li>excellent</li>
         </ul>
-        <label for="chart">rating</label>
-        <input type="checkbox" name="etc" />
-        <input type="checkbox" name="etc" />
-        <input type="checkbox" name="etc" />
+        <label for="chart">Rating</label>
+        <i class="far fa-frown-open"></i><input type="checkbox" name="etc" />
+        <i class="far fa-grin"></i><input type="checkbox" name="etc" />
+        <i class="far fa-grin-hearts"></i><input type="checkbox" name="etc" />
+        <ul>
+          <li><u>Service</u></li>
+          <li>poor</li>
+          <li>good</li>
+          <li>excellent</li>
+        </ul>
+        <label for="chart">Rating</label>
+        <i class="far fa-frown-open"></i><input type="checkbox" name="etc" />
+        <i class="far fa-grin"></i><input type="checkbox" name="etc" />
+        <i class="far fa-grin-hearts"></i><input type="checkbox" name="etc" />
+        <ul>
+          <li><u>Taste....</u></li>
+          <li>poor</li>
+          <li>good</li>
+          <li>excellent</li>
+        </ul>
+        <label for="chart">Rating</label>
+        <i class="far fa-frown-open"></i><input type="checkbox" name="etc" />
+        <i class="far fa-grin"></i><input type="checkbox" name="etc" />
+        <i class="far fa-grin-hearts"></i><input type="checkbox" name="etc" />
+        <ul>
+          <li><u>Hygiene</u></li>
+          <li>poor</li>
+          <li>good</li>
+          <li>excellent</li>
+        </ul>
+        <label for="chart">Rating</label>
+        <i class="far fa-frown-open"></i><input type="checkbox" name="etc" />
+        <i class="far fa-grin"></i><input type="checkbox" name="etc" />
+        <i class="far fa-grin-hearts"></i><input type="checkbox" name="etc" />
       </div>
     </div>
   </body>
