attach input,placeholder and button in feedback card

--- a/feedback.html
+++ b/feedback.html
@@ -31,6 +31,22 @@
 
       <div class="card">
         <h1>Feedback</h1>
+
+        <input
+          class="zoom"
+          type="text"
+          name="name"
+          placeholder="name"
+          required
+        />
+        <input
+          class="zoom"
+          type="text"
+          name="name"
+          placeholder="mobile number"
+          required
+        />
+
         <ul>
           <li><u>Quailty</u></li>
           <li>poor</li>
@@ -71,6 +87,7 @@
         <i class="far fa-frown-open"></i><input type="checkbox" name="etc" />
         <i class="far fa-grin"></i><input type="checkbox" name="etc" />
         <i class="far fa-grin-hearts"></i><input type="checkbox" name="etc" />
+        <button class="don" type="button" class="button">Submmit</button>
       </div>
     </div>
   </body>
