--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="banner-title">
         <h1>
-          <span>Coffee</span><i class="fas fa-mug-hot"></i> And Friends <br />
+          <span>Coffee</span> And Friends <br />
           Are The Perfect Blend <br />Because it Doesn't Ask silly
           Questions.....
         </h1>
